Adicionar imagem centarl

--- a/204-grid/index.html
+++ b/204-grid/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>header</header>
-    <nav>nav</nav>
+    <header><img src="tenor.gif" alt=""></header>
+    <nav><a href="">Home</a>
+        <a href="">Quem somos</a>
+        <a href="">Sobre nós</a>
+        <a href="">Fale conosco</a>
+    </nav>
     <section>section</section>
     <aside>aside</aside>
     <footer>footer</footer>
