--- a/204-grid/index.html
+++ b/204-grid/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="hamburguer.png" type="image/x-icon">
 </head>
 <body>
     <header><img src="tenor.gif" alt=""></header>
