Adicionar registro e logos

--- a/204-grid/index.html
+++ b/204-grid/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>SIte de comida teste</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="hamburguer.png" type="image/x-icon">
 </head>
@@ -15,9 +15,17 @@
         <a href="">Sobre nós</a>
         <a href="">Fale conosco</a>
     </nav>
-    <section>section</section>
-    <aside>aside</aside>
-    <footer>footer</footer>
+    <section></section>
+    <aside><h3>Acessar sua conta</h3>
+        <input placeholder="Digite seu email" type="email">
+    <input placeholder="Digite sua senha" type="password">
+    <button>Acessar</button>
+    </aside>
+    <footer>
+        <div>
+            <img src="hamburguer.png" alt="">
+        </div>
+    </footer>
 
 
 </body>
