--- a/204-grid/index.html
+++ b/204-grid/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SIte de comida teste</title>
+    <title>Doações para escolas</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="hamburguer.png" type="image/x-icon">
+    <script src=""></script>
 </head>
+
 <body>
-    <header><img src="tenor.gif" alt=""></header>
-    <nav><a href="">Home</a>
-        <a href="">Quem somos</a>
-        <a href="">Sobre nós</a>
-        <a href="">Fale conosco</a>
+    <header><a href="">Home</a>
+        <a href="">Login</a>
+        <a href="">Escolas</a>
+        <a id="a" href="">Cadastrar</a></header >
+    <nav>
     </nav>
-    <section></section>
-    <aside><h3>Acessar sua conta</h3>
-        <input placeholder="Digite seu email" type="email">
-    <input placeholder="Digite sua senha" type="password">
-    <button>Acessar</button>
-    </aside>
+    <section>
+                <div>
+                    <p></p>
+                </div>
+        <img src="1105-Sala-de-aula-Escola-Lindolfo-Collor-PF-0009-e1471465030233.jpg" alt="">
+    </section>
+    <aside>
+        
+            <h3>login da conta</h3>
+            <input placeholder="Digite seu email" type="email">
+            <input placeholder="Digite sua senha" type="password">
+            <button>Acessar</button>
+
+            <div>
+                <button>registro da escola</button>
+            </div>
+        
+    </aside> 
     <footer>
         <div>
             <img src="hamburguer.png" alt="">
@@ -29,4 +44,5 @@
 
 
 </body>
+
 </html>
