--- a/204-grid/index.htm
+++ b/204-grid/index.htm
@@ -51,14 +51,21 @@
     </div>
     </section>
     <aside>
-        <h3>login da conta</h3>
+        <!-- <h3>login da conta</h3>
         <input placeholder="Digite seu email" type="email">
         <input placeholder="Digite sua senha" type="password">
         <button>Acessar</button>
 
         <div>
             <button>registro da escola</button>
-        </div>
+        </div> -->
+        <h2>Passo a passo para doações</h2>
+        <p>1°Registre sua conta em "Cadastrar".
+           2°Selecione uma escola que queira.
+           3°Veja a lista de materiáis que a escola precisa.
+           4°Doe a quantidade que tenha de materiáis.
+           5°Pronto você acaba de ajudar uma escola.
+        </p>
 
     </aside>
     <footer>
